--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -1,25 +1,85 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="center" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X6l-gz-cI3">
+                                <rect key="frame" x="279" y="281" width="42" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="0th-Kx-VSO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrt-hG-E4J">
+                                <rect key="frame" x="255" y="381" width="91" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="r2F-Ik-jYy"/>
+                                </constraints>
+                                <state key="normal" title="Show answer"/>
+                                <connections>
+                                    <action selector="Answer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dTV-eB-0Hy"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Question" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u4U-I9-OVh">
+                                <rect key="frame" x="95" y="53" width="412.5" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="OX9-er-qki"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5UX-lV-iod">
+                                <rect key="frame" x="251" y="167" width="98" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="nDo-qe-KGe"/>
+                                </constraints>
+                                <state key="normal" title="Next Question"/>
+                                <connections>
+                                    <action selector="Question:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gar-Hg-dzd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hrt-hG-E4J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0fK-or-469"/>
+                            <constraint firstItem="5UX-lV-iod" firstAttribute="top" secondItem="u4U-I9-OVh" secondAttribute="bottom" constant="94" id="4mB-he-Kud"/>
+                            <constraint firstItem="X6l-gz-cI3" firstAttribute="top" secondItem="5UX-lV-iod" secondAttribute="bottom" constant="84" id="6X2-FM-scx"/>
+                            <constraint firstItem="u4U-I9-OVh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7ge-iC-gsd"/>
+                            <constraint firstItem="X6l-gz-cI3" firstAttribute="centerX" secondItem="5UX-lV-iod" secondAttribute="centerX" id="T2z-qW-SnS"/>
+                            <constraint firstItem="hrt-hG-E4J" firstAttribute="centerX" secondItem="5UX-lV-iod" secondAttribute="centerX" id="ZGQ-tq-j8d"/>
+                            <constraint firstItem="hrt-hG-E4J" firstAttribute="top" secondItem="X6l-gz-cI3" secondAttribute="bottom" constant="79.5" id="bUb-1Z-tl3"/>
+                            <constraint firstItem="u4U-I9-OVh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="33" id="ciN-kV-Nk3"/>
+                            <constraint firstItem="5UX-lV-iod" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eLk-ZF-S6U"/>
+                            <constraint firstItem="X6l-gz-cI3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="t4Q-Sv-psA"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ShowAnswer" destination="hrt-hG-E4J" id="2qc-DM-103"/>
+                        <outlet property="ShowQuestion" destination="5UX-lV-iod" id="bfo-aJ-iPm"/>
+                        <outlet property="answerLabel" destination="X6l-gz-cI3" id="7fg-7M-Hen"/>
+                        <outlet property="questionLabel" destination="u4U-I9-OVh" id="DZS-cI-lKo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-78" y="341"/>
         </scene>
     </scenes>
 </document>
